cluster/nginx-ingress-ntnu/network_policy.yaml
---
#---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#name: allow-only-ntnu-ips
#namespace: nginx-ingress-ntnu
#spec:
#podSelector:
#matchLabels:
#app.kubernetes.io/name: ingress-nginx
#policyTypes:
#- Ingress
#ingress:
#- from:
#- ipBlock:
#cidr: 129.241.0.0/16
#- ipBlock:
#cidr: 78.91.0.0/18
#- ipBlock:
#cidr: 78.91.64.0/20
#- ipBlock:
#cidr: 78.91.80.0/22
#- ipBlock:
#cidr: 128.39.0.0/16
#- ipBlock:
#cidr: 158.38.0.0/16
#- ipBlock:
#cidr: 2001:700:300::/46
#- ipBlock:
#cidr: 2001:700:b00::/48
#- ipBlock:
#cidr: 2001:700:1200::/48
#- ipBlock:
#cidr: 2001:700:1d00::/48
#- ipBlock:
#cidr: 2001:700:300::/44
#- ipBlock:
#cidr: 10.133.0.0/16
#ports:
#- port: 80
#protocol: TCP
#- port: 443
#protocol: TCP
#---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#name: allow-kube-system
#namespace: nginx-ingress-ntnu
#spec:
#podSelector:
#matchLabels:
#app.kubernetes.io/name: ingress-nginx
#policyTypes:
#- Ingress
#ingress:
#- from:
#- namespaceSelector:
#matchLabels:
#kubernetes.io/metadata.name: kube-system
#ports:
#- port: 443
#protocol: TCP
#---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#name: default-deny-all-ingress
#namespace: nginx-ingress-external
#spec:
#podSelector: {}
#policyTypes:
#- Ingress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-only-ntnu-ips
  namespace: nginx-ingress-ntnu
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - fromCIDR:
        - 129.241.0.0/16
        - 78.91.0.0/18
        - 78.91.64.0/20
        - 78.91.80.0/22
        - 128.39.0.0/16
        - 158.38.0.0/16
        - 2001:700:300::/46
        - 2001:700:b00::/48
        - 2001:700:1200::/48
        - 2001:700:1d00::/48
        - 2001:700:300::/44
        - 10.133.0.0/16
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-system
  namespace: nginx-ingress-ntnu
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - fromEndpoints:
        - matchLabels:
            kubernetes.io/metadata.name: kube-system
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all-ingress
  namespace: nginx-ingress-ntnu
spec:
  endpointSelector:
    matchLabels: {}
  ingress: []
